[package]
name = "indigo-bot"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-http = { version = "3.2.2", features = [
	"http2",
	"rustls",
], default-features = false }
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.25"
octocrab = { version = "0.17.0", features = ["rustls"] }
once_cell = "1.16.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serenity = { version = "0.11.5", default-features = false, features = [
	"model",
	"client",
	"gateway",
	"rustls_backend",
	"chrono",
] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-loki = { version = "0.2.1", default-features = false, features = [
	"rustls",
	"compat-0-2-1",
] }
tracing-subscriber = { version = "0.3.16", features = ["parking_lot"] }
