[package]
name = "app-api"
version = "1.0.0"
edition = "2021"

[dependencies]
app-shared = { path = "../app-shared" }
app-macros = { path = "../app-macros" }

tracing = "0.1.37"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
reqwest = { version = "0.11.13", features = ["rustls", "json", "serde_json"], default-features = false }
