[package]
name = "app-api"
version = "1.0.0"
edition = "2021"

[dependencies]
app-shared = { path = "../app-shared" }
app-macros = { path = "../app-macros" }

tracing = "0.1.37"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", features = [
	"rustls",
	"json",
	"serde_json",
], default-features = false }
