[package]
name = "app-http-server"
version = "1.0.0"
edition = "2021"

[dependencies]
app-macros = { path = "../app-macros" }
app-api = { path = "../app-api" }
app-shared = { path = "../app-shared" }

tracing = "0.1.37"
serde = { version = "1.0.152", features = ["derive"] }
actix-http = { version = "3.3.0", features = [
	"http2",
	"rustls",
], default-features = false }
actix-web = { version = "4.3.0", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
tera = "1.17.1"
actix-files = "0.6.2"
notify = "5.1.0"
derive_builder = "0.12.0"
html-escape = "0.2.13"
