[package]
name = "app-shared"
version = "1.0.0"
edition = "2021"

[dependencies]
app-macros = { path = "../app-macros" }

futures-util = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serenity = { version = "0.11.5", default-features = false, features = [
	"model",
	"client",
	"gateway",
	"rustls_backend",
	"chrono",
	"utils",
	"cache",
] }
tracing = "0.1.37"
octocrab = { version = "0.18.1", features = ["rustls"] }
bitflags = "1.3.2"
rand = "0.8.5"
toml = "0.7.2"
hex_color = { version = "2.0.0", features = ["serde"] }
serde_yaml = "0.9.17"
itertools = "0.10.5"
parking_lot = "0.12.1"
regex = "1.7.1"
sqlx = { version = "0.6.2", features = [
	"runtime-tokio-rustls",
	"postgres",
	"chrono",
] }
