[package]
name = "indigo-bot"
version = "1.0.0"
edition = "2021"

[dependencies]
app-api = { path = "../app-api" }
app-http-server = { path = "../app-http-server" }
app-discord-bot = { path = "../app-discord-bot" }
app-shared = { path = "../app-shared" }

tracing = "0.1.37"
tracing-loki = { version = "0.2.1", default-features = false, features = [
	"rustls",
	"compat-0-2-1",
] }
tracing-subscriber = { version = "0.3.16", features = ["parking_lot"] }
